cmake_minimum_required(VERSION 3.20)
project(BonusWork)

set(CMAKE_CXX_STANDARD 14)

add_executable(BonusWork main.cpp LinkedList.cpp LinkedList.h stack.cpp stack.h stackLinkedListVersion.cpp stackLinkedListVersion.h doubleLinked.cpp doubleLinked.h Queue.cpp Queue.h QueueLinkedListVersion.cpp QueueLinkedListVersion.h BTSTree.cpp BTSTree.h BinaryTree.cpp BinaryTree.h)
