cmake_minimum_required(VERSION 3.20)
project(BonusWork)

set(CMAKE_CXX_STANDARD 14)

add_executable(BonusWork main.cpp Folder4/LinkedList.cpp Folder4/LinkedList.h Folder7/stack.cpp Folder7/stack.h Folder8/stackLinkedListVersion.cpp Folder8/stackLinkedListVersion.h Folder3/doubleLinked.cpp Folder3/doubleLinked.h Folder5/Queue.cpp Folder5/Queue.h Folder6/QueueLinkedListVersion.cpp Folder6/QueueLinkedListVersion.h Folder1/BTSTree.cpp Folder1/BTSTree.h Folder2/BinaryTree.cpp Folder2/BinaryTree.h)
